--- a/planning/minutes/2-18-2021.md
+++ b/planning/minutes/2-18-2021.md
@@ -8,133 +8,88 @@
 ## Question 2
 ### Actions Worked in Past Week:
 
-Action 4: "Write 2 User stories (14 total)" Assigned: Everyone, Completed: 2/18 (Completed 16 User Stories)
+Action 4: "Write 2 User stories (14 total)" Assigned: Everyone, Completed: 2/18
 
 #### Hayden
 
-Action 5: "Whenisgood form to schedule consistent meetings" Assigned: Hayden
-
-#### Cassandra
-
-{ What tasks or Actions have you meaningfully worked during the last week? Include some identification of the Action such as its name or a number established when the Action was first assigned. Identify who the Action was assigned to. Identify when Action completion is due. }
-
-#### Parker
-
-{ What tasks or Actions have you meaningfully worked during the last week? Include some identification of the Action such as its name or a number established when the Action was first assigned. Identify who the Action was assigned to. Identify when Action completion is due. }
-
-#### William
-
-{ What tasks or Actions have you meaningfully worked during the last week? Include some identification of the Action such as its name or a number established when the Action was first assigned. Identify who the Action was assigned to. Identify when Action completion is due. }
-
-#### Derrick
-
-{ What tasks or Actions have you meaningfully worked during the last week? Include some identification of the Action such as its name or a number established when the Action was first assigned. Identify who the Action was assigned to. Identify when Action completion is due. }
-
-#### Hunter
-
-{ What tasks or Actions have you meaningfully worked during the last week? Include some identification of the Action such as its name or a number established when the Action was first assigned. Identify who the Action was assigned to. Identify when Action completion is due. }
-
-#### Charles
-
-{ What tasks or Actions have you meaningfully worked during the last week? Include some identification of the Action such as its name or a number established when the Action was first assigned. Identify who the Action was assigned to. Identify when Action completion is due. }
+Action 5: "Whenisgood form to schedule consistent meetings" Assigned: Hayden Completed 2/18
 
 ## Question 3
 ### New Actions Assigned to You:
 
 #### Hayden
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 7: Break down user stories 8 & 14 Due: 2/25
 
 #### Cassandra
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 8: Break down user stories 1 & 11 Due: 2/25
 
 #### Parker
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 9: Break down user stories 3 & 10 Due: 2/25
 
 #### William
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 10: Break down user stories 9 & 12 Due: 2/25
 
 #### Derrick
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 11: Break down user stories 7 & 13 Due: 2/25
 
 #### Hunter
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 12: Break down user stories 5 & 2 Due: 2/25
 
 #### Charles
 
-{ What new tasks or Actions were assigned to you this week? Each new Action must have an identifying title or number, a description of objective completion criteria, one or more team members assigned to complete the Action, and a due date for Action completion. }
+Action 6: Set up Jira Server for project management Due: 2/25
+Action 13: Break down user stories 4 & 6 Due: 2/25
 
 ## Question 4
 ### Completed Actions:
 
-Action 4: "Write 2 User stories (14 total)" Assigned: Everyone, Completed: 2/18 (Completed 16 User Stories)
+Action 4: "Write 2 User stories (14 total)" Assigned: Everyone, Completed: 2/18
 
 #### Hayden
 
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
-#### Cassandra
-
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
-#### Parker
-
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
-#### William
-
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
-#### Derrick
-
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
-#### Hunter
-
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
-#### Charles
-
-{ What actions assigned to you have been closed as complete within the last week? For each Action completed in the past week, identify the Action, who it was assigned to, when it was due, and when it was completed. }
-
+Action 5: "Whenisgood form to schedule consistent meetings" Completed 2/18
 
 ## Question 5
 ### Planned Work:
 
 #### Hayden
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 7: Break down user stories 8 & 14 Due: 2/25
 
 #### Cassandra
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 8: Break down user stories 1 & 11 Due: 2/25
 
 #### Parker
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 9: Break down user stories 3 & 10 Due: 2/25
 
 #### William
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 10: Break down user stories 9 & 12 Due: 2/25
 
 #### Derrick
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 11: Break down user stories 7 & 13 Due: 2/25
 
 #### Hunter
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 12: Break down user stories 5 & 2 Due: 2/25
 
 #### Charles
 
-{ What work do you plan to perform over the next week? Identify any Actions the work contributes to closing. Be specific about what you plan to do. }
+Action 6: Set up Jira Server for project management Due: 2/25
+Action 13: Break down user stories 4 & 6 Due: 2/25 
 
 ## Question 6
 ### Decisions and Other Contributions in Past Week:
 
 Switch to IText7 instead of pdfbox, new repository is located here [https://github.com/DryCreations/pdfproject](https://github.com/DryCreations/pdfproject)
+
+Switch to Jira Server for project management
