add newly assigned tasks

--- a/planning/minutes/4-1-2021.md
+++ b/planning/minutes/4-1-2021.md
@@ -57,7 +57,11 @@ Action 46: "add ability to move assets around within document (3 points)" Due 04
 
 #### Hayden
 
+Action 47: add button to open existing pdf Due: 04/08
 
+Action 48: add linter or something to format on save consistently Due: 04/08
+
+Action 50: set up contributing guidelines/code of conduct for repo. Due: 04/08
 
 #### Cassandra
 
@@ -65,7 +69,7 @@ Action 46: "add ability to move assets around within document (3 points)" Due 04
 
 #### Parker
 
-
+Action 51: Update readme to include a more in depth description of the project including attributions to group members. Due: 04/08
 
 #### William
 
@@ -96,7 +100,7 @@ Action 37: "add ability to export pdf document (3 point)" Assigned Hayden Due: 0
 
 #### Cassandra
 
-
+Action 49: set up folder and markdown to show testing with screenshots of the app working. Due: 04/08
 
 #### Parker
 
@@ -126,7 +130,7 @@ Action 47: add button to open existing pdf Due: 04/08
 
 Action 48: add linter or something to format on save consistently Due: 04/08
 
-50: set up contributing guidelines/code of conduct for repo. Due: 04/08
+Action 50: set up contributing guidelines/code of conduct for repo. Due: 04/08
 
 #### Cassandra
 
@@ -134,7 +138,7 @@ Action 38: "Reorder the PDF (3 point)" Due: 04/08
 
 Action 34 Completion Criteria: "Attach a link to a selected element - task 18.2" Assigned: Cassandra Due (pushed back): 04/08
 
-49: set up folder and markdown to show testing with screenshots of the app working. Due: 04/08
+Action 49: set up folder and markdown to show testing with screenshots of the app working. Due: 04/08
 
 #### Parker
 
@@ -142,7 +146,7 @@ Action 39: "add ability to specify dimensions of document pages (2 point)" Due (
 
 Action 40: "add ability to import external assets onto the document (5 points)" Due (pushed back): 04/08
 
-51: Update readme to include a more in depth description of the project including attributions to group members. Due: 04/08
+Action 51: Update readme to include a more in depth description of the project including attributions to group members. Due: 04/08
 
 #### William
 
