--- a/planning/minutes/4-8-2021.md
+++ b/planning/minutes/4-8-2021.md
@@ -109,6 +109,9 @@ Action 34 Completion Criteria: "Attach a link to a selected element - task 18.2"
 
 #### Parker
 
+Action 39: "add ability to specify dimensions of document pages (2 point)" Due (pushed back): 04/08
+
+Action 51: Update readme to include a more in depth description of the project including attributions to group members. Due: 04/08
 
 #### William
 
@@ -152,11 +155,7 @@ Action 52: do pull request review of [https://github.com/DryCreations/pdfproject
 
 Action 57: Write 1 user to add to backlog, and break down into tasks (1 point) Due: 04/15
 
-Action 39: "add ability to specify dimensions of document pages (2 point)" Due (pushed back): 04/15 (pushed back)
-
 Action 40: "add ability to import external assets onto the document (5 points)" Due (pushed back): 04/15 (pushed back)
-
-Action 51: Update readme to include a more in depth description of the project including attributions to group members. Due: 04/15 (pushed back)
 
 #### William
 
